[FIX]: Applied the blurred background for the player widget tile

--- a/widgets/audio_track_player/src/audio-track-player.css
+++ b/widgets/audio_track_player/src/audio-track-player.css
@@ -1,33 +1,29 @@
 .flow-audio-track-player {
     display: flex;
     align-items: center;
-    background-color: #f5f5f5;
-    /* background-color: rgba(0, 0, 0, 0.5); */
-    /* Add a semi-transparent overlay to improve contrast */
+    position: relative;
     border-radius: 8px;
     padding: 6px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     width: 100%;
-    /* Change max-width to width */
     box-sizing: border-box;
     flex-wrap: wrap;
-    /* position: relative; */
-    /* Allow wrapping on smaller screens */
     overflow: hidden;
-    /* Add this to prevent overflow */
 }
 
-/* .flow-audio-track-player::before {
-    content: "";
-    backdrop-filter: blur(100px) brightness(150%) contrast(150%) saturate(80%) !important;
-    -webkit-backdrop-filter: blur(100px) brightness(150%) contrast(150%) saturate(80%) !important;
-    transform: scale(1.1);
+.flow-audio-track-player-background {
     position: absolute;
     top: 0;
     left: 0;
-    width: 0;
-    height: 0;
-} */
+    right: 0;
+    bottom: 0;
+    background-size: cover;
+    background-position: center;
+    filter: blur(30px);
+    opacity: 0.5;
+    z-index: 0;
+    transform: scale(1.1);
+}
 
 .z-index-1 {
     z-index: 10;
